# image-thumbs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  compose.yaml
.github/workflows/: ci.yml
examples/: basic.rs  image_thumbs.yaml
src/: aws.rs  error.rs  gcs.rs  gcs_mock.json  image.rs  lib.rs  model.rs  storage.rs
src/test/: gcs_mock.json  image_thumbs.yaml
