[package]
name = "image_thumbs"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/tweedegolf/image-thumbs"
keywords = ["GCS", "image", "thumbnails"]
license = "MIT OR Apache-2.0"
description = "Simple to use crate to create thumbnails and store them in a object store like Google Cloud Storage"
exclude = [
    ".github/",
    "compose.yml",
    "bin/",
    ".cargo/"
]

[[example]]
name = "basic"

[dependencies]
object_store = { version = "0.9", features = ["gcp"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
bytes = "1.5"
futures = "0.3"
mime = "0.3"
sequential-test = "0.2"
