[package]
name = "image_thumbs"
version = "0.5.1"
edition = "2024"
repository = "https://github.com/tweedegolf/image-thumbs"
keywords = ["GCS", "AWS", "image", "thumbnails"]
license = "MIT OR Apache-2.0"
description = "Simple to use crate to create thumbnails and store them in a object store like Google Cloud Storage or AWS S3"
exclude = [
    ".github/",
    "compose.yml",
    "bin/",
    ".cargo/"
]

[[example]]
name = "basic"

[dependencies]
object_store = { version = "0.12", features = ["gcp", "aws"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
config = { version = "0.15.8", default-features = false, features = ["yaml"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
mime = "0.3"
sequential-test = "0.2"
